--- a/build-tools-internal/src/main/groovy/elasticsearch.run-ccs.gradle
+++ b/build-tools-internal/src/main/groovy/elasticsearch.run-ccs.gradle
@@ -16,8 +16,11 @@ def fulfillingCluster = testClusters.register('fulfilling-cluster') {
   setting 'xpack.watcher.enabled', 'false'
   setting 'xpack.ml.enabled', 'false'
   setting 'xpack.license.self_generated.type', 'trial'
+  setting 'transport.untrusted.port',  "9402" //TODO: support this via the run task
+  setting 'xpack.security.transport.ssl.enabled', 'false' //TODO: support the new untrusted profile in security
 
   user username: 'elastic-admin', password: 'elastic-password', role: '_es_test_root'
+
 }
 
 def queryingCluster = testClusters.register('querying-cluster') {
@@ -27,6 +30,8 @@ def queryingCluster = testClusters.register('querying-cluster') {
   setting 'xpack.ml.enabled', 'false'
   setting 'xpack.license.self_generated.type', 'trial'
   setting 'cluster.remote.connections_per_cluster', "1"
+  setting 'transport.untrusted.port',  "9403" //TODO: support this via the run task
+  setting 'xpack.security.transport.ssl.enabled', 'false' //TODO: support the new untrusted profile in security
   user username: 'elastic-admin', password: 'elastic-password', role: '_es_test_root'
 }
 
