--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ org.gradle.java.installations.fromEnv=JAVA_TOOLCHAIN_HOME,JAVA_HOME,RUNTIME_JAVA
 
 # log some dependency verification info to console
 org.gradle.dependency.verification.console=verbose
+org.gradle.dependency.verification=off
